--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,15 @@
 .salmon-text {
     color: salmon;
 }
+
+.indigo-text {
+    color: indigo;
+}
+
+.big-text {
+    font-size: 2.25rem;
+}
+
+label {
+    display: block;
+}
